# eclaircp

./: .gitignore  CHANGELOG.md  HACKATHON_SUBMISSION.md  HACKATON_RULES.md  LICENSE  README.md  demo.py  pyproject.toml  test_installation.sh
.kiro/specs/eclair-mcp-cli/: design.md  requirements.md  tasks.md
.kiro/steering/: product.md  structure.md  tech.md
examples/: README.md  config.yaml  development-config.yaml  minimal-config.yaml  production-config.yaml
src/eclaircp/: __init__.py  cli.py  config.py  error_logging.py  exceptions.py  mcp.py  session.py  ui.py
tests/: __init__.py  test_cli.py  test_config.py  test_end_to_end.py  test_error_integration.py  test_exceptions.py  test_integration.py  test_mcp.py  test_performance.py  test_session.py  test_ui.py  test_ui_integration.py
