[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "eclaircp"
version = "0.1.0"
description = "Elegant CLI for testing MCP servers - A Python-based tool for interactive testing and validation of Model Context Protocol servers with streaming responses"
authors = [
    { name = "Loïc", email = "loic.labeye@tutanota.de" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "strands-agents>=0.1.0",
    "strands-agents-tools>=0.1.0",
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "rich>=13.0.0",
    "textual>=0.40.0",
    "click>=8.0.0",
]
keywords = ["mcp", "cli", "testing", "model-context-protocol", "strands", "agents"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
    "Topic :: System :: Networking",
]

[project.urls]
Homepage = "https://github.com/nag763/eclaircp"
Repository = "https://github.com/nag763/eclaircp"
Issues = "https://github.com/nag763/eclaircp/issues"

[project.scripts]
eclaircp = "eclaircp.cli:main"

[tool.uv]
dev-dependencies = [
    "pyink>=1.0.0",
    "pylint>=3.0.0",
    "isort>=5.0.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.10.0",
    "pytest-cov>=4.0.0",
]

[tool.pyink]
line-length = 88
target-version = ["py39"]
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.pylint.messages_control]
disable = [
    "missing-docstring",
    "too-few-public-methods",
    "too-many-arguments",
    "too-many-instance-attributes",
    "too-many-locals",
    "too-many-branches",
    "too-many-statements",
]

[tool.pylint.format]
max-line-length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=eclaircp",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
